Add button to navigate to second page

--- a/index.html
+++ b/index.html
@@ -766,6 +766,9 @@
   </div>
 </div>
 
+  <a href="/gantt-demo copy.html">
+     <button class="btn btn-primary">Second Page</button>
+  </a>
 <script>
 const DAY_MS = 86400000;
 let baseDate = new Date();
