Replace anchor link with button for navigation

--- a/index.html
+++ b/index.html
@@ -766,9 +766,10 @@
   </div>
 </div>
 
-  <a href="/gantt-demo copy.html">
-     <button class="btn btn-primary">Second Page</button>
-  </a>
+<button class="btn btn-primary" onclick="location.href='gantt-demo-copy.html'">
+    Second Page
+</button>
+
 <script>
 const DAY_MS = 86400000;
 let baseDate = new Date();
