Update button link to gantt-demo2.html

--- a/index.html
+++ b/index.html
@@ -766,10 +766,9 @@
   </div>
 </div>
 
-<button class="btn btn-primary" onclick="location.href='gantt-demo-copy.html'">
+<button class="btn btn-primary" onclick="location.href='gantt-demo2.html'">
     Second Page
 </button>
-
 <script>
 const DAY_MS = 86400000;
 let baseDate = new Date();
